--- a/Go Parks/View/Base.lproj/Main.storyboard
+++ b/Go Parks/View/Base.lproj/Main.storyboard
@@ -684,7 +684,7 @@
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qQq-Z8-5Iu">
                                         <rect key="frame" x="25" y="55.333333333333321" width="364" height="125.66666666666669"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <mutableString key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</mutableString>
+                                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                         <color key="textColor" red="0.61568627450980395" green="0.67450980392156867" blue="0.70588235294117641" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" name="OpenSans-Regular" family="Open Sans" pointSize="13"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -707,10 +707,10 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HEr-r4-8Ml" userLabel="Route">
-                                                <rect key="frame" x="263" y="1" width="27" height="27"/>
+                                                <rect key="frame" x="260.66666666666669" y="1.6666666666666288" width="26" height="26"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="27" id="PCN-9f-X8g"/>
-                                                    <constraint firstAttribute="width" constant="27" id="fP3-OM-uXs"/>
+                                                    <constraint firstAttribute="height" constant="26" id="PCN-9f-X8g"/>
+                                                    <constraint firstAttribute="width" constant="26" id="fP3-OM-uXs"/>
                                                 </constraints>
                                                 <state key="normal" backgroundImage="cursor"/>
                                                 <connections>
@@ -725,20 +725,20 @@
                                                 </constraints>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="EXPLORE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3rU-2p-Gmk">
-                                                <rect key="frame" x="310" y="6" width="59" height="16"/>
+                                                <rect key="frame" x="309.66666666666669" y="6" width="59.333333333333314" height="16"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="16" id="5jY-un-eND"/>
                                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="59" id="nij-z6-MhE"/>
                                                 </constraints>
-                                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="13"/>
+                                                <fontDescription key="fontDescription" name="Ubuntu-Bold" family="Ubuntu" pointSize="13"/>
                                                 <color key="textColor" red="0.61568627450980395" green="0.67450980392156867" blue="0.70588235294117641" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xgC-cb-qX2">
-                                                <rect key="frame" x="25" y="1" width="27" height="27"/>
+                                                <rect key="frame" x="25" y="1.6666666666666288" width="26" height="26"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="27" id="PQO-np-gzz"/>
-                                                    <constraint firstAttribute="width" constant="27" id="iDg-ai-wb1"/>
+                                                    <constraint firstAttribute="height" constant="26" id="PQO-np-gzz"/>
+                                                    <constraint firstAttribute="width" constant="26" id="iDg-ai-wb1"/>
                                                 </constraints>
                                                 <state key="normal" backgroundImage="info"/>
                                                 <connections>
@@ -746,7 +746,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xkf-nu-7fu">
-                                                <rect key="frame" x="77" y="2" width="37" height="25"/>
+                                                <rect key="frame" x="74" y="2" width="37" height="25"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="25" id="u3Z-EV-OR2"/>
                                                     <constraint firstAttribute="width" constant="37" id="yWk-CI-60o"/>
@@ -764,14 +764,14 @@
                                             <constraint firstItem="HEr-r4-8Ml" firstAttribute="centerY" secondItem="AMC-vc-D7x" secondAttribute="centerY" id="6Su-0b-JJl"/>
                                             <constraint firstItem="HLA-8f-tAk" firstAttribute="centerY" secondItem="AMC-vc-D7x" secondAttribute="centerY" id="8ax-cm-fwb"/>
                                             <constraint firstItem="M8V-DN-TTZ" firstAttribute="centerY" secondItem="AMC-vc-D7x" secondAttribute="centerY" id="9pM-eU-yzy"/>
-                                            <constraint firstItem="3rU-2p-Gmk" firstAttribute="leading" secondItem="HEr-r4-8Ml" secondAttribute="trailing" constant="20" id="HBP-TE-D9B"/>
+                                            <constraint firstItem="3rU-2p-Gmk" firstAttribute="leading" secondItem="HEr-r4-8Ml" secondAttribute="trailing" constant="23" id="HBP-TE-D9B"/>
                                             <constraint firstAttribute="trailing" secondItem="HLA-8f-tAk" secondAttribute="trailing" constant="25" id="L7p-TD-QID"/>
                                             <constraint firstAttribute="height" constant="29" id="OMv-Le-grl"/>
                                             <constraint firstAttribute="trailing" secondItem="M8V-DN-TTZ" secondAttribute="trailing" constant="25" id="boz-ov-eqQ"/>
                                             <constraint firstItem="HLA-8f-tAk" firstAttribute="leading" secondItem="3rU-2p-Gmk" secondAttribute="trailing" constant="5" id="fEA-cc-xmj"/>
                                             <constraint firstItem="xgC-cb-qX2" firstAttribute="centerY" secondItem="AMC-vc-D7x" secondAttribute="centerY" id="wB0-h7-6fw"/>
                                             <constraint firstItem="xkf-nu-7fu" firstAttribute="centerY" secondItem="AMC-vc-D7x" secondAttribute="centerY" id="wok-qb-IWj"/>
-                                            <constraint firstItem="xkf-nu-7fu" firstAttribute="leading" secondItem="xgC-cb-qX2" secondAttribute="trailing" constant="25" id="ykh-Tn-Ya9"/>
+                                            <constraint firstItem="xkf-nu-7fu" firstAttribute="leading" secondItem="xgC-cb-qX2" secondAttribute="trailing" constant="23" id="ykh-Tn-Ya9"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -899,6 +899,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="Htx-P7-oeh">
                         <nil key="title"/>
+                        <barButtonItem key="backBarButtonItem" title=" " id="v1q-7D-o3X"/>
                         <view key="titleView" contentMode="scaleToFill" id="OMM-pa-eed">
                             <rect key="frame" x="207" y="22" width="0.0" height="0.0"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -948,9 +949,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <wkWebView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WSM-fW-xRb">
-                                <rect key="frame" x="0.0" y="20" width="414" height="716"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WSM-fW-xRb">
+                                <rect key="frame" x="0.0" y="66" width="414" height="670"/>
                                 <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <gestureRecognizers/>
                                 <wkWebViewConfiguration key="configuration">
@@ -962,37 +962,50 @@
                                 </connections>
                             </wkWebView>
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="mTU-eL-HiN">
-                                <rect key="frame" x="188.66666666666666" y="349.66666666666669" width="37" height="37"/>
+                                <rect key="frame" x="189" y="350" width="37" height="37"/>
                                 <color key="color" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </activityIndicatorView>
                             <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.10000000000000001" translatesAutoresizingMaskIntoConstraints="NO" id="044-Bp-COx">
-                                <rect key="frame" x="0.0" y="20" width="414" height="2"/>
+                                <rect key="frame" x="0.0" y="64" width="414" height="2"/>
                                 <color key="tintColor" red="0.1215686275" green="0.41568627450000001" blue="0.96078431369999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="2" id="Psn-DS-PF5"/>
+                                    <constraint firstAttribute="height" constant="2" id="qva-Qo-y4J"/>
                                 </constraints>
                             </progressView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M2h-Gn-xt5">
-                                <rect key="frame" x="15" y="37" width="25" height="25"/>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rii-Ja-NHQ">
+                                <rect key="frame" x="0.0" y="20" width="414" height="44"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="25" id="gs7-YI-pSV"/>
-                                    <constraint firstAttribute="width" constant="25" id="nKP-cI-MSt"/>
+                                    <constraint firstAttribute="height" constant="44" id="JR4-uq-Fio"/>
                                 </constraints>
-                                <state key="normal" backgroundImage="dismiss"/>
-                                <connections>
-                                    <action selector="dismissButton:" destination="yt4-ko-K7L" eventType="touchUpInside" id="dPf-pv-Ry1"/>
-                                </connections>
-                            </button>
+                                <items>
+                                    <barButtonItem systemItem="done" id="2Uw-9w-v6J">
+                                        <connections>
+                                            <action selector="dismissButton:" destination="yt4-ko-K7L" id="bPV-1U-ijb"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="Qlh-cF-fhl"/>
+                                    <barButtonItem systemItem="refresh" id="BKf-ME-uGQ">
+                                        <connections>
+                                            <action selector="refreshPressed:" destination="yt4-ko-K7L" id="5XL-gp-CvD"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="WSM-fW-xRb" firstAttribute="top" secondItem="044-Bp-COx" secondAttribute="bottom" id="0dT-jY-hl0"/>
+                            <constraint firstItem="WSM-fW-xRb" firstAttribute="bottom" secondItem="5cf-sX-w3i" secondAttribute="bottom" id="3da-rq-g7w"/>
+                            <constraint firstItem="WSM-fW-xRb" firstAttribute="leading" secondItem="5cf-sX-w3i" secondAttribute="leading" id="8HZ-4s-i7M"/>
                             <constraint firstItem="mTU-eL-HiN" firstAttribute="centerX" secondItem="W74-kC-Jys" secondAttribute="centerX" id="HfV-BL-TsO"/>
-                            <constraint firstItem="044-Bp-COx" firstAttribute="leading" secondItem="W74-kC-Jys" secondAttribute="leading" id="K6L-Ol-3Sp"/>
-                            <constraint firstItem="M2h-Gn-xt5" firstAttribute="top" secondItem="044-Bp-COx" secondAttribute="bottom" constant="15" id="QQO-tf-7dP"/>
-                            <constraint firstAttribute="trailing" secondItem="044-Bp-COx" secondAttribute="trailing" id="cVs-R9-aUU"/>
+                            <constraint firstItem="Rii-Ja-NHQ" firstAttribute="top" secondItem="5cf-sX-w3i" secondAttribute="top" id="I4J-E4-SaS"/>
+                            <constraint firstItem="WSM-fW-xRb" firstAttribute="trailing" secondItem="5cf-sX-w3i" secondAttribute="trailing" id="bRV-bD-lg0"/>
+                            <constraint firstItem="Rii-Ja-NHQ" firstAttribute="trailing" secondItem="5cf-sX-w3i" secondAttribute="trailing" id="dvd-w3-bQL"/>
                             <constraint firstItem="mTU-eL-HiN" firstAttribute="centerY" secondItem="W74-kC-Jys" secondAttribute="centerY" id="fK7-kb-2Vh"/>
-                            <constraint firstItem="044-Bp-COx" firstAttribute="top" secondItem="5cf-sX-w3i" secondAttribute="top" id="kN2-Mu-sUU"/>
-                            <constraint firstItem="M2h-Gn-xt5" firstAttribute="leading" secondItem="5cf-sX-w3i" secondAttribute="leading" constant="15" id="sru-vH-1Sc"/>
+                            <constraint firstItem="044-Bp-COx" firstAttribute="trailing" secondItem="Rii-Ja-NHQ" secondAttribute="trailing" id="i6R-w4-sQh"/>
+                            <constraint firstItem="044-Bp-COx" firstAttribute="top" secondItem="Rii-Ja-NHQ" secondAttribute="bottom" id="sDp-Qn-vqf"/>
+                            <constraint firstItem="Rii-Ja-NHQ" firstAttribute="leading" secondItem="5cf-sX-w3i" secondAttribute="leading" id="tNq-P0-WOR"/>
+                            <constraint firstItem="044-Bp-COx" firstAttribute="leading" secondItem="Rii-Ja-NHQ" secondAttribute="leading" id="zZ3-YL-Mim"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="5cf-sX-w3i"/>
                     </view>
@@ -1000,6 +1013,7 @@
                     <connections>
                         <outlet property="loadingPage" destination="mTU-eL-HiN" id="Ic0-hp-HeV"/>
                         <outlet property="progressBar" destination="044-Bp-COx" id="P5z-ko-LsF"/>
+                        <outlet property="refreshBtn" destination="BKf-ME-uGQ" id="Gm6-Ai-rTV"/>
                         <outlet property="webView" destination="WSM-fW-xRb" id="RBV-oU-19s"/>
                     </connections>
                 </viewController>
@@ -1254,7 +1268,6 @@ AAAAAAAAAAAALwk
         </image>
         <image name="cloudy" width="36" height="25"/>
         <image name="cursor" width="24" height="24"/>
-        <image name="dismiss" width="107" height="107"/>
         <image name="dots" width="5" height="28"/>
         <image name="heartGrey" width="42" height="37"/>
         <image name="info" width="24" height="24"/>
