--- a/Go Parks/View/Base.lproj/Main.storyboard
+++ b/Go Parks/View/Base.lproj/Main.storyboard
@@ -4,13 +4,15 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
+        <array key="OpenSans-Italic.ttf">
+            <string>OpenSans-Italic</string>
+        </array>
         <array key="OpenSans-Light.ttf">
             <string>OpenSans-Light</string>
         </array>
@@ -753,14 +755,14 @@
                                 </constraints>
                             </mapView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Big Bend" translatesAutoresizingMaskIntoConstraints="NO" id="8u6-H8-fG7">
-                                <rect key="frame" x="0.0" y="64" width="375" height="228.5"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="239"/>
                                 <gestureRecognizers/>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dG6-SI-Vsr" userLabel="InfoView">
-                                <rect key="frame" x="0.0" y="292.5" width="375" height="234.5"/>
+                                <rect key="frame" x="0.0" y="303" width="375" height="224"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="X3N-qE-o8L">
-                                        <rect key="frame" x="25" y="15" width="74.5" height="30.5"/>
+                                        <rect key="frame" x="25" y="15" width="260" height="30.5"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <gestureRecognizers/>
                                         <fontDescription key="fontDescription" name="Ubuntu-Bold" family="Ubuntu" pointSize="27"/>
@@ -768,7 +770,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qQq-Z8-5Iu">
-                                        <rect key="frame" x="25" y="83" width="325" height="92"/>
+                                        <rect key="frame" x="25" y="74.5" width="325" height="90.5"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                         <color key="textColor" red="0.61568627450980395" green="0.67450980392156867" blue="0.70588235294117641" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -777,7 +779,7 @@
                                         <dataDetectorType key="dataDetectorTypes" phoneNumber="YES" link="YES"/>
                                     </textView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AMC-vc-D7x" userLabel="ToolbarView">
-                                        <rect key="frame" x="0.0" y="190.5" width="375" height="29"/>
+                                        <rect key="frame" x="0.0" y="180" width="375" height="29"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M8V-DN-TTZ" userLabel="Explore">
                                                 <rect key="frame" x="271" y="2" width="79" height="25"/>
@@ -893,42 +895,50 @@
                                             </constraint>
                                         </constraints>
                                     </view>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eqK-oH-vrz">
-                                        <rect key="frame" x="25" y="50.5" width="325" height="27.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="WW WW" textAlignment="right" lineBreakMode="clip" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="eqK-oH-vrz">
+                                        <rect key="frame" x="290" y="18" width="60" height="27.5"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="15" id="AG5-tM-3wv"/>
+                                            <constraint firstAttribute="width" constant="60" id="JZx-B3-naK"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" name="OpenSans-Light" family="Open Sans" pointSize="20"/>
+                                        <fontDescription key="fontDescription" name="OpenSans-Regular" family="Open Sans" pointSize="20"/>
                                         <color key="textColor" red="0.62745098039215685" green="0.67450980392156867" blue="0.70196078431372544" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="National Monument" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X7Y-bn-S00">
+                                        <rect key="frame" x="25" y="46.5" width="325" height="18"/>
+                                        <fontDescription key="fontDescription" name="OpenSans-Italic" family="Open Sans" pointSize="13"/>
+                                        <color key="textColor" red="0.63529411764705879" green="0.67450980392156867" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstItem="eqK-oH-vrz" firstAttribute="leading" secondItem="dG6-SI-Vsr" secondAttribute="leading" constant="25" id="2pN-j3-ReF"/>
-                                    <constraint firstAttribute="width" secondItem="dG6-SI-Vsr" secondAttribute="height" multiplier="64:40" id="3M3-5W-ikK"/>
+                                    <constraint firstAttribute="width" secondItem="dG6-SI-Vsr" secondAttribute="height" multiplier="67:40" id="3M3-5W-ikK"/>
+                                    <constraint firstItem="X7Y-bn-S00" firstAttribute="leading" secondItem="dG6-SI-Vsr" secondAttribute="leading" constant="25" id="4Lv-uT-X8L"/>
                                     <constraint firstItem="qQq-Z8-5Iu" firstAttribute="leading" secondItem="dG6-SI-Vsr" secondAttribute="leading" constant="25" id="9TS-jK-smU">
                                         <variation key="heightClass=regular-widthClass=regular" constant="40"/>
                                     </constraint>
                                     <constraint firstAttribute="trailing" secondItem="AMC-vc-D7x" secondAttribute="trailing" id="GSs-pB-dTH"/>
+                                    <constraint firstItem="eqK-oH-vrz" firstAttribute="leading" secondItem="X3N-qE-o8L" secondAttribute="trailing" constant="5" id="H9A-Dk-qmo"/>
                                     <constraint firstAttribute="trailing" secondItem="eqK-oH-vrz" secondAttribute="trailing" constant="25" id="HUJ-j7-uWa"/>
                                     <constraint firstItem="X3N-qE-o8L" firstAttribute="top" secondItem="dG6-SI-Vsr" secondAttribute="top" constant="15" id="JuW-bH-6w5">
                                         <variation key="heightClass=regular-widthClass=regular" constant="40"/>
                                     </constraint>
-                                    <constraint firstItem="qQq-Z8-5Iu" firstAttribute="top" secondItem="eqK-oH-vrz" secondAttribute="bottom" constant="5" id="LiS-q4-w0X"/>
                                     <constraint firstAttribute="trailing" secondItem="qQq-Z8-5Iu" secondAttribute="trailing" constant="25" id="PtW-1m-Aa0">
                                         <variation key="heightClass=regular-widthClass=regular" constant="40"/>
                                     </constraint>
+                                    <constraint firstItem="X7Y-bn-S00" firstAttribute="top" secondItem="eqK-oH-vrz" secondAttribute="bottom" constant="1" id="QJh-cu-PEw"/>
                                     <constraint firstItem="AMC-vc-D7x" firstAttribute="leading" secondItem="dG6-SI-Vsr" secondAttribute="leading" id="YK1-Ga-nCc"/>
                                     <constraint firstItem="X3N-qE-o8L" firstAttribute="leading" secondItem="dG6-SI-Vsr" secondAttribute="leading" constant="25" id="bWC-ku-OQt">
                                         <variation key="heightClass=regular-widthClass=regular" constant="40"/>
                                     </constraint>
-                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="X3N-qE-o8L" secondAttribute="trailing" constant="20" id="h99-pJ-ZBi"/>
                                     <constraint firstAttribute="bottom" secondItem="AMC-vc-D7x" secondAttribute="bottom" constant="15" id="kUa-UQ-hjq">
                                         <variation key="heightClass=regular-widthClass=regular" constant="40"/>
                                     </constraint>
+                                    <constraint firstAttribute="trailing" secondItem="X7Y-bn-S00" secondAttribute="trailing" constant="25" id="nGF-Lg-Rkh"/>
                                     <constraint firstItem="AMC-vc-D7x" firstAttribute="top" secondItem="qQq-Z8-5Iu" secondAttribute="bottom" constant="15" id="nGa-n1-tL3"/>
-                                    <constraint firstItem="eqK-oH-vrz" firstAttribute="top" secondItem="X3N-qE-o8L" secondAttribute="bottom" constant="5" id="zcP-EI-BJX"/>
+                                    <constraint firstItem="qQq-Z8-5Iu" firstAttribute="top" secondItem="X7Y-bn-S00" secondAttribute="bottom" constant="10" id="qCf-sn-Tme"/>
+                                    <constraint firstItem="X7Y-bn-S00" firstAttribute="top" secondItem="X3N-qE-o8L" secondAttribute="bottom" constant="1" id="rrw-1b-MYE"/>
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="02G-zf-kQw">
@@ -947,7 +957,7 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Aor-CM-jyD" userLabel="WeatherView">
-                                <rect key="frame" x="249" y="227.5" width="101" height="45"/>
+                                <rect key="frame" x="249" y="238" width="101" height="45"/>
                                 <subviews>
                                     <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="18l-fE-G69">
                                         <rect key="frame" x="21.5" y="4.5" width="37" height="37"/>
@@ -1072,6 +1082,7 @@
                         <outlet property="changeUnitsBtn" destination="S1K-U0-NEl" id="uJd-bw-9SD"/>
                         <outlet property="descriptionButton" destination="xgC-cb-qX2" id="eL9-Om-hUj"/>
                         <outlet property="descriptionViewHeightConstraint" destination="3M3-5W-ikK" id="xLQ-6c-OjF"/>
+                        <outlet property="designationLabel" destination="X7Y-bn-S00" id="AHm-Dk-r06"/>
                         <outlet property="favorite" destination="02G-zf-kQw" id="XZl-Bv-r38"/>
                         <outlet property="favoriteBtn" destination="02G-zf-kQw" id="CHM-XG-CXD"/>
                         <outlet property="mapMinConstraint" destination="xnN-dV-faF" id="P4S-7d-cwo"/>
@@ -1090,7 +1101,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0vE-Iq-fSP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5260" y="130.88455772113943"/>
+            <point key="canvasLocation" x="5259.5" y="130.5"/>
         </scene>
         <!--Web ViewVC-->
         <scene sceneID="bV0-Zn-eri">
